Fixed alignment issue with footer and main page content.

--- a/css/main.scss
+++ b/css/main.scss
@@ -179,8 +179,8 @@ div.post{
 	flex: 1 0 auto;
 }
 footer{
-	margin: 1em 0 0 0;
 	flex: 0 0 auto;
+	padding: 1.5em 0 0.5em 0;
 }
 div.footerLinks{
 	display: flex;
